feat - criando os entities

--- a/src/Services/Publisher/Domain/MoviesRental.Domain/MoviesRental.Domain.csproj
+++ b/src/Services/Publisher/Domain/MoviesRental.Domain/MoviesRental.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\BuildingBlocks\MoviesRental.Core\MoviesRental.Core.csproj" />
+  </ItemGroup>
+
 </Project>
